fix overwrapping text

--- a/src/components/common/AuthWrapper/auth-landing-page.scss
+++ b/src/components/common/AuthWrapper/auth-landing-page.scss
@@ -16,6 +16,9 @@
     width: 180px;
   }
 }
+.os-header.bg-nav-scrolled {
+  background: #F1F5FF;
+}
 .os-container {
   width: 100%;
   max-width: 1100px;
