--- a/src/components/common/DashboardLayout/SideBar/SideBar.scss
+++ b/src/components/common/DashboardLayout/SideBar/SideBar.scss
@@ -94,7 +94,7 @@
     border-bottom: 0.5px solid rgba(63, 63, 63, 0.308);
   }
   .sidebar ul li a:hover {
-    background: rgba(51, 53, 86, 0.1);
+    background: #242424;
   }
   .sidebar ul li img {
     position: absolute;
